# src/libs/api/index.ts
@@ -26,6 +26,7 @@ export type { CpntAuth } from './models/CpntAuth';
 export type { CpntAuthResponse } from './models/CpntAuthResponse';
 export type { DoTwdsS0S1 } from './models/DoTwdsS0S1';
 export type { Employee } from './models/Employee';
+export type { EmployeesPhoto } from './models/EmployeesPhoto';
 export type { ExtendCarbonCredit } from './models/ExtendCarbonCredit';
 export type { ExtendedCart } from './models/ExtendedCart';
 export type { ExtendedCompany } from './models/ExtendedCompany';
@@ -127,6 +128,7 @@ export { $CpntAuth } from './schemas/$CpntAuth';
 export { $CpntAuthResponse } from './schemas/$CpntAuthResponse';
 export { $DoTwdsS0S1 } from './schemas/$DoTwdsS0S1';
 export { $Employee } from './schemas/$Employee';
+export { $EmployeesPhoto } from './schemas/$EmployeesPhoto';
 export { $ExtendCarbonCredit } from './schemas/$ExtendCarbonCredit';
 export { $ExtendedCart } from './schemas/$ExtendedCart';
 export { $ExtendedCompany } from './schemas/$ExtendedCompany';
